# hackathon_competion

./: .gitignore  README.md  startall.ps1  startall.sh  stopall.ps1  stopall.sh
client/: package-lock.json  package.json
client/src/: App.css  App.jsx  index.css
client/src/components/: MarketData.jsx  OrderEntry.jsx  PriceChart.jsx  TradeView.jsx
client/src/hooks/: useWebSocket.js
client/src/lib/: candleAggregator.js  priceBus.js
docs/: bug_dev.html  bug_qa.html  bug_sec.html  find_bug.md  hephaestus_exchange_bugfix_feature_verify.md  tungck_architect.md
exchange/admin/: package-lock.json
exchange/admin/src/: App.css  App.jsx
exchange/admin/src/components/: ClientCount.jsx  CommLogs.jsx  MarketControl.jsx  OrderBookView.jsx  StockConfig.jsx  TradeHistory.jsx
exchange/admin/src/hooks/: useAdminApi.js  useAdminWebSocket.js
exchange/engine/: pyproject.toml
exchange/engine/src/engine/: api.py  config.py  fix_codec.py  main.py  matching.py  models.py  order_book.py  ws_server.py
exchange/engine/tests/: test_api.py  test_fix_codec.py  test_matching.py  test_models.py  test_order_book.py  test_ws_server.py
