[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dzung Bui", email = "dbui.vnipt@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "simplefix>=1.0.17",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
]
